Adding All Pages

--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@
 
 <header>
 
+<div class="row">
+
 	<div class='menu'>
 
 		<ul>
-  			<li><a href "index.html">HOME.</a></li>
-            <li><a href "#">ABOUT.</a></li>
-            <li><a href "get-involved.html">GET INVOLVED.</a></li>
+  			<li class="col-sm-2"><a href "index.html">HOME.</a></li>
+            <li class="col-sm-2"><a href "#">ABOUT.</a></li>
+            <li class="col-sm-4"><a href "get-involved.html">GET INVOLVED.</a></li>
 		</ul>
 
 	</div>
 
-<h1>
+
+
+<h1 class="span4 offset1">
 
     <span class="pink">F</span><span class="green">R</span><span class="blue">E</span><span class="green">E</span>
     <span class="pink">C</span><span class="green">A</span><span class="blue">K</span><span class="green">E</span><span class="blue">S</span>
@@ -33,6 +37,9 @@
     <span class="green">U</span><span class="blue">K</span>
 
 </h1>
+
+</div>
+
 
 </header>
 
@@ -59,7 +66,7 @@
     </ul>
 </div>
 
-<!--
+
 <div id="footer">
   <div class="social-icon">
     <a target="_blank" href="https://www.facebook.com/freecakesuk/"><img src='images/facebook.png'></a>
@@ -67,7 +74,7 @@
     <a target="_blank" href="https://twitter.com/KidsFREEcakes"><img src='images/twitter.png'></a>
   </div>
 </div>
--->
+
 
 
 </body>
