--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 
 <div id="footer">
   <div class="social-icon">
-    <a target="_blank" href="https://www.facebook.com/freecakesuk/"><img src='images/facebook.png'></a>
-    <a target="_blank" href="https://www.instagram.com/cake/"><img src='images/instagram.png'></a>
-    <a target="_blank" href="https://twitter.com/KidsFREEcakes"><img src='images/twitter.png'></a>
+    <a target="_blank" href="https://www.facebook.com/freecakesuk/"><img src='Images/facebook.png'></a>
+    <a target="_blank" href="https://www.instagram.com/cake/"><img src='Images/instagram.png'></a>
+    <a target="_blank" href="https://twitter.com/KidsFREEcakes"><img src='Images/twitter.png'></a>
   </div>
 </div>
 
