--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="jquery.jcarousel.min.js"></script>
     <script type="text/javascript" src="carousel.js"></script>
 
-	<link rel="shortcut icon" href="images/favicon.ico" />
+	<link rel="shortcut icon" href="Images/favicon.ico" />
 </head>
 
 <body>
@@ -59,7 +59,7 @@
     </div>
 
     <div class="col-sm-6 testimonial">
-        <img class="img-circle" src="images/child.jpg">
+        <img class="img-circle" src="Images/child.jpg">
     	<p class="quote">"Our children are all in difficult circumstances - many may never have had a homemade cake before. The mums like it, too - it's a lovely surprise and we believe it can help repair relationships."</p>
     </div>
 </div>
@@ -70,9 +70,9 @@
     <div class="jcarousel-wrapper">
         <div class="jcarousel">
             <ul>
-                <li><img src="images/cake9.jpg"></li>
-                <li><img src="images/cake2.jpg"></li>
-                <li><img src="images/cake3.jpg"></li>
+                <li><img src="Images/cake9.jpg"></li>
+                <li><img src="Images/cake2.jpg"></li>
+                <li><img src="Images/cake3.jpg"></li>
             </ul>
         </div>
 
