Child Image Fixed

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="col-sm-6 testimonial">
-        <img class="img-circle" src="Images/child.jpg">
+        <img class="img-circle" src="Images/Child.jpg">
     	<p class="quote">"Our children are all in difficult circumstances - many may never have had a homemade cake before. The mums like it, too - it's a lovely surprise and we believe it can help repair relationships."</p>
     </div>
 </div>
