Nav Links Fixed

--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
 	<title>About Free Cakes</title>
   <link href='dist/css/bootstrap.css'rel='stylesheet'>
 	<link rel="stylesheet" type="type/css"href="index.css">
-	<link rel="" href="images/sprinkles.jpg">
+	<link rel="" href="Images/sprinkles.jpg">
+  <link rel="shortcut icon" href="Images/favicon.ico" />
 </head>
 
 
@@ -15,9 +16,9 @@
    <div class='menu'>
 
     <ul>
-        <li><a href "index.html">HOME.</a></li>
-        <li><a href "#">ABOUT.</a></li>
-        <li><a href "get-involved.html">GET INVOLVED.</a></li>
+        <li><a href ="index.html">HOME.</a></li>
+        <li><a href ="about.html">ABOUT.</a></li>
+        <li><a href ="get-involved.html">GET INVOLVED.</a></li>
     </ul>
 
   </div>
@@ -114,9 +115,9 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 <div id="footer">
   <div class="social-icon">
-    <a target="_blank" href="https://www.facebook.com/freecakesuk/"><img src='images/facebook.png'></a>
-    <a target="_blank" href="https://www.instagram.com/cake/"><img src='images/instagram.png'></a>
-    <a target="_blank" href="https://twitter.com/KidsFREEcakes"><img src='images/twitter.png'></a>
+    <a target="_blank" href="https://www.facebook.com/freecakesuk/"><img src='Images/facebook.png'></a>
+    <a target="_blank" href="https://www.instagram.com/cake/"><img src='Images/instagram.png'></a>
+    <a target="_blank" href="https://twitter.com/KidsFREEcakes"><img src='Images/twitter.png'></a>
   </div>
 </div>
 
