--- a/Get-Involved.html
+++ b/Get-Involved.html
@@ -8,7 +8,7 @@
 	<title>Give or Get Cake</title>
   <link href='dist/css/bootstrap.css'rel='stylesheet'>
 	<link rel="stylesheet"type="text/css"href="index.css">
-  <link rel="shortcut icon" href="images/favicon.ico">
+  <link rel="shortcut icon" href="Images/favicon.ico">
 
 </head>
 
@@ -21,9 +21,9 @@
   <div class='menu'>
 
     <ul>
-        <li><a href "index.html">HOME.</a></li>
-            <li><a href "about.html">ABOUT.</a></li>
-            <li><a href "get-involved.html">GET INVOLVED.</a></li>
+        <li><a href ="index.html">HOME.</a></li>
+        <li><a href ="about.html">ABOUT.</a></li>
+        <li><a href ="get-involved.html">GET INVOLVED.</a></li>
     </ul>
 
   </div>
@@ -159,9 +159,9 @@
 </h4>
 <div id="footer">
   <div class="social-icon">
-    <a target="_blank" href="https://www.facebook.com/freecakesuk/"><img src='images/facebook.png'></a>
-    <a target="_blank" href="https://www.instagram.com/cake/"><img src='images/instagram.png'></a>
-    <a target="_blank" href="https://twitter.com/KidsFREEcakes"><img src='images/twitter.png'></a>
+    <a target="_blank" href="https://www.facebook.com/freecakesuk/"><img src='Images/facebook.png'></a>
+    <a target="_blank" href="https://www.instagram.com/cake/"><img src='Images/instagram.png'></a>
+    <a target="_blank" href="https://twitter.com/KidsFREEcakes"><img src='Images/twitter.png'></a>
   </div>
 </div>
 
