--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 	<div class='menu'>
 
 		<ul>
-  			<li><a href "index.html">HOME.</a></li>
-            <li><a href "about.html">ABOUT.</a></li>
-            <li><a href "get-involved.html">GET INVOLVED.</a></li>
+  			<li><a href ="index.html">HOME.</a></li>
+            <li><a href ="about.html">ABOUT.</a></li>
+            <li><a href ="get-involved.html">GET INVOLVED.</a></li>
 		</ul>
 
 	</div>
