--- a/getinvolved2.html
+++ b/getinvolved2.html
@@ -53,9 +53,7 @@
 
 </header>
 
-<div id="Quotes">
-
-<h2>Hear from our Free Cake Community...</h2>
+<h2>Our Community.</h2>
 
 <div class="wrapper">
             
@@ -78,15 +76,11 @@
     </div>
 </div>
 
-</div>
-
-<div id="questionform">
-
 <div id='Get-Involved'> 
 
-<p class="Question"><span class="green">W</span><span class="blue">a</span><span class="pink">n</span><span class="green">t</span> <span class="blue">t</span><span class="green">o</span> <span class="pink">G</sa<span class="green">e</span><span class="blue">t</span> <span class="pink">I</span><span class="green">n</span><span class="blue">v</span><span class="green">o</span><span class="pink">l</span><span class="blue">v</span><span class="green">e</span><span class="blue">d</span><span class="pink">?</span></p><br/>
-  <button class ='give btn btn-xlg give-cake'>Give a cake!</button>
-  <button class ='get btn btn-xlg get-cake'>Get a cake!</button>
+<h2> Get Involved.</h2>
+  <button class ='give btn btn-lg give-cake'>Give a cake!</button>
+  <button class ='get btn btn-lg get-cake'>Get a cake!</button>
   
 </div>
 
@@ -195,8 +189,6 @@
     <button class="get-btn btn btn-lg">Submit form</button>
 
   <div id='match'> Thank you for submitting this form, once your specifications are matched with a volunteer, we will be in touch with more details </div>
-</div>
-
 </div>
 
 </div>
