Links open in new tab

--- a/about.html
+++ b/about.html
@@ -60,11 +60,11 @@
     <div class="col-sm-6 press">
         <ul>
      		<u><strong>In the Press</strong></u>
-      			<li>"Hackney Group wins council grant for baking workshops". <a href="http://www.theguardian.com/lifeandstyle/2013/dec/07/free-birthday-cake-charity-for-kids-get-togethers/">The Guardian</a></li><br/>
+      			<li>"Hackney Group wins council grant for baking workshops". <a target="_blank" href="http://www.theguardian.com/lifeandstyle/2013/dec/07/free-birthday-cake-charity-for-kids-get-togethers/">The Guardian</a></li><br/>
 
-      		<li>"Families get so much out of this and recognise that there are people out there who care". <a href="http://www.getwestlondon.co.uk/news/local-news/baking-charity-cakes-kids-asks-6784370Get West London/">Get West London</a></li><br/>
+      		<li>"Families get so much out of this and recognise that there are people out there who care". <a target="_blank" href="http://www.getwestlondon.co.uk/news/local-news/baking-charity-cakes-kids-asks-6784370Get West London/">Get West London</a></li><br/>
 
-      		<li>"Free Cakes For Kids Reading has made the final of the Skipton Building Society Grassroots Giving awards". <a href="http://www.getreading.co.uk/news/reading-berkshire-news/free-cakes-kids-reading-reach-10081666/">Reading Berkshire News</a></li>
+      		<li>"Free Cakes For Kids Reading has made the final of the Skipton Building Society Grassroots Giving awards". <a target="_blank" href="http://www.getreading.co.uk/news/reading-berkshire-news/free-cakes-kids-reading-reach-10081666/">Reading Berkshire News</a></li>
       	</ul>
     </div>
 
