Formatting + Slider Changed
Images added to slider
some responsive issues fixed
alternative get involved page added

--- a/about.html
+++ b/about.html
@@ -43,7 +43,6 @@
     <span class="green"> F</span><span class="pink">O</span><span class="blue">R</span> <span class="pink">K</span><span class="blue">I</span><span class="green">D</span><span class="pink">S</span>
     <br/>
     
-
 </h1>
 
 </header>
@@ -85,20 +84,22 @@
 
     </div>
 
-  <div class="col-sm-6 contactus">
+<div class="col-sm-6 contactus">
       <img src="Images/cakesforkids.jpg"><br/><br/>
-	     Get in touch
+    Get in touch
       <form action="MAILTO:info@freecakesforkids.org.uk" method="post" enctype="text/plain">
-      Name:<br>
-      <input type="text" name="name" value="your name"><br>
-      E-mail:<br>
-      <input type="text" name="mail" value="your email"><br>
-      Comment:<br>
-      <input type="text" name="comment" value="your comment" size="40"><br><br>
+      Name:<br/>
+      <input type="text" name="name" value="your name"><br/>
+      E-mail:<br/>
+      <input type="text" name="mail" value="your email"><br/>
+      Comment:<br/>
+      <input type="text" name="comment" value="your comment"><br/>
+      <br/>
         <input type="submit" value="Send">
       <input type="reset" value="Reset">
       </form>
       <br/>
+</div>
 
   </div>
 </div>
