--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
 <div class="CakeMonth">
     <span class="pink">C</span><span class="blue">a</span><span class="green">k</span><span class="pink">e</span> <span class="blue">o</span><span class="pink">f</span> <span class="green">t</span><span class="blue">h</span><span class="green">e</span> <span class="blue">M</span><span class="pink">o</span><span class="blue">n</span><span class="pink">t</span><span class="blue">h</span><span class="green">.</span>
 </div>
-
 <div class="wrapper">
             
 
@@ -77,6 +76,8 @@
                 <li><img src="Images/cake9.jpg"></li>
                 <li><img src="Images/cake2.jpg"></li>
                 <li><img src="Images/cake3.jpg"></li>
+                <li><img src="Images/cake4.jpg"></li>
+                <li><img src="Images/cake8.jpg"></li>
             </ul>
         </div>
 
