--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="row2">
     <div class="col-sm-6 about">
 
-	   <strong>We are Free Cakes for Kids UK:</strong> A community service for families who find it difficult to provide a birthday cake for their child.
+	   <strong>We are Free Cakes for Kids UK:</strong> A community service for families who find it difficult to provide a birthday cake for their child.<br/><br/>
 
     </div>
 
