Image Added to Slider

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -215,6 +215,7 @@
                 <li><img src="Images/test3.jpg"></li>
                 <li><img src="Images/test4.jpg"></li>
                 <li><img src="Images/test5.jpg"></li>
+                <li><img src="Images/test6.jpg"></li>
             </ul>
         </div>
 
