Placeholder on form

--- a/about.html
+++ b/about.html
@@ -89,11 +89,11 @@
     Get in touch
       <form action="MAILTO:info@freecakesforkids.org.uk" method="post" enctype="text/plain">
       Name:<br/>
-      <input type="text" name="name" value="your name"><br/>
+      <input type="text" name="name" placeholder="your name"><br/>
       E-mail:<br/>
-      <input type="text" name="mail" value="your email"><br/>
+      <input type="text" name="mail" placeholder="your email"><br/>
       Comment:<br/>
-      <input type="text" name="comment" value="your comment"><br/>
+      <input type="text" name="comment" placeholder="your comment"><br/>
       <br/>
         <input type="submit" value="Send">
       <input type="reset" value="Reset">
