--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
   <div class="social-icon">
     <a target="_blank" href="https://www.facebook.com/freecakesuk/"><img src='Images/facebook.png'></a>
     <a target="_blank" href="https://www.instagram.com/cake/"><img src='Images/instagram.png'></a>
-    <a target="_blank" href="https://twitter.com/KidsFREEcakes"><img src='Images/twitter.png'></a>
+    <a target="_blank" href="https://twitter.com/freecakesuk"><img src='Images/twitter.png'></a>
   </div>
 </div>
 
